// Copyright (c) 2022, Mysten Labs, Inc.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package services;

// IMPORTS

import "transaction.proto";

// INTERFACE

message Empty {}

// VALIDATOR GRPC

service ValidatorGRPC {
    
    // GET
    
    // request latest block info
    rpc GetLatestBlockInfo (LatestBlockInfoRequest) returns (BlockInfoResponse);

    // request block info by block number
    rpc GetBlockInfo (BlockInfoRequest) returns (BlockInfoResponse);

    // request block (includes transactions)
    rpc GetBlock (BlockRequest) returns (BlockResponse);

    // request metrics
    rpc GetLatestMetrics (MetricsRequest) returns (MetricsResponse);
    
    // PUT
    
    // submit a transaction
    rpc SubmitTransaction(transaction.SignedTransaction) returns (Empty) {}
    
    // submit a transaction via stream
    rpc SubmitTransactionStream(stream transaction.SignedTransaction) returns (Empty) {}
    
}

// block info

message LatestBlockInfoRequest {}

message BlockInfoRequest {
    uint64 block_number = 1;
}

message BlockInfoResponse {
    bool successful = 1;
    bytes serialized_block_info = 2;
}

// block

message BlockRequest {
    uint64 block_number = 1;
}

message BlockResponse {
    bool successful = 1;
    bytes serialized_block = 2;
}

// metrics

message MetricsRequest {}

message MetricsResponse {
    uint64 average_latency = 1;
    double average_tps = 2;
}

// FAUCET

service Faucet {
    // request airdrop
    rpc Airdrop (FaucetAirdropRequest) returns (FaucetAirdropResponse);
}

message FaucetAirdropRequest {
    string airdrop_to = 1;
    uint64 amount = 2;
}

message FaucetAirdropResponse {
    bool successful = 1;
}